--- a/src/locales/fr/common.json
+++ b/src/locales/fr/common.json
@@ -30,6 +30,13 @@
     "spanish": "Español",
     "german": "Deutsch",
     "italian": "Italiano",
-    "portuguese": "Português"
+    "portuguese": "Português",
+    "greek": "Grec",
+    "finnish": "Finlandais",
+    "dutch": "Néerlandais",
+    "azerbaijani": "Azéri",
+    "polish": "Polonais",
+    "maltese": "Maltais",
+    "czech": "Tchèque"
   }
 }
