--- a/src/locales/gr/contact.json
+++ b/src/locales/gr/contact.json
@@ -17,9 +17,9 @@
     "error_msg": "Παρουσιάστηκε σφάλμα. Παρακαλώ δοκιμάστε ξανά.",
     "form": {
       "name": "Πλήρες όνομα",
-      "name_placeholder": "Jean Dupont",
+      "name_placeholder": "Popular Financia",
       "email": "Email",
-      "email_placeholder": "jean.dupont@example.com",
+      "email_placeholder": "contact@popularfinancia.com",
       "subject": "Θέμα",
       "select_subject": "Επιλέξτε θέμα",
       "subject_loan": "Πληροφορίες για δάνειο",
